# DBMSproject

./: .dockerignore  .env.example  .env_example  .env_example_v1  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKFILL_README.md  DB_OPTIMIZATION.md  DEEP_DIVE_REPORT.md  DOCUMENTATION.md  Docker_MYSQL_Cheatsheet.md  Dockerfile  INDEXES.md  Makefile  OPTIMIZATION.md  OPTIMIZATION_GUIDE.md  README.md  ROADMAP.md  ROUTER_SETUP.md  SPATIAL_INDEX.md  backfill_docker.sh  backfill_fingerprints_parallel.py  benchmark_performance.py  check_cache.sh  debug_cache.py  docker-compose.yml  index.html  manage_cache.py  project_page.html  pyproject.toml  requirements.txt  run.py  run_backend.py  run_etl_2024.sh  run_v1.py  run_web.py  sample.csv  start.py  start_kb.py  (+2 more)
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  README.md  alembic.ini  debug_chat.py  dependencies.py  main.py
backend/agents/: enhanced_reporter.py  gdelt_agent.py  planner.py
backend/alembic/: env.py
backend/database/: __init__.py  errors.py  streaming.py
backend/docs/: ARCHITECTURE.md  DEVELOPMENT.md
backend/queries/: __init__.py  core_queries.py  query_utils.py
backend/routers/: agent.py  analyze.py  data.py
backend/schemas/: responses.py
backend/services/: actor_normalization.py  data_service.py  executor.py  gkg_client.py  news_scraper.py  storyline_builder.py  thp_neural.py  thp_service.py
backend/src/gdelt_api/: __init__.py  main.py
backend/src/gdelt_api/api/: __init__.py  dependencies.py  errors.py
backend/src/gdelt_api/api/v1/: __init__.py
backend/src/gdelt_api/api/v1/endpoints/: chat.py  events.py  health.py
backend/src/gdelt_api/config/: __init__.py  settings.py
backend/src/gdelt_api/core/: __init__.py  events.py  exceptions.py  logging.py
backend/src/gdelt_api/db/: __init__.py  base.py  session.py
backend/src/gdelt_api/mcp/: __init__.py  client.py  pool.py
backend/src/gdelt_api/models/: __init__.py  chat.py  common.py  event.py
backend/src/gdelt_api/services/: __init__.py  chat_service.py  event_service.py  llm_service.py
backend/src/gdelt_api/utils/: __init__.py  datetime.py  security.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: test_models.py
db/: data_view.py  gdelt_db_v1.sql
db_scripts/: README.md  add_indexes.sql  add_search_indexes.sql  add_spatial_indexes.sql  all_indexes.sql  backfill_fingerprints_parallel.py  build_chromadb_index.py  build_knowledge_base.py  calibrate_thp_checkpoint.py  check_db_status.py  crontab_setup.sh  dashboard_fast_precompute.sql  data_view.py  etl_pipeline.py  fix_spatial_data.sql  fix_srid.sql  gdelt_db_v1.sql  import_event.py  indexes.sql  parallel_etl_pipeline.py  partition_events_table.sql  precompute_tables.sql  sweep_thp_gpu.py  train_thp_model.py
docs/: ARCHITECTURE_V2.md  PRODUCT_VISION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActorActivityPanel.tsx  ChatPanel.tsx  ComparePanel.tsx  Dashboard.tsx  DistributionCharts.tsx  EventContextPanel.tsx  EventDetailCard.tsx  EventDrawer.tsx  EventReportPanel.tsx  EventStorylinePanel.tsx  EventTable.tsx  EventTimeline.tsx  ExplorePanel.tsx  FilterBar.tsx  ForecastChart.tsx  ForecastPanel.tsx  ForecastWorkspace.tsx  GKGInsightCards.tsx  HotEventsPanel.tsx  InsightCards.tsx  MapPanel.tsx  NewsCoveragePanel.tsx  RealEventTimeline.tsx  ReportExport.tsx  ReportPanel.tsx  SimilarEventCards.tsx  StatsCards.tsx  StorylineTimeline.tsx  TimeSeriesChart.tsx
frontend/src/types/: index.ts
mcp_app/: __init__.py  cli.py  client.py  config.py  config_wizard.py  llm.py  logger.py  providers.py  router.py
mcp_client/: client.py
mcp_server/: gdelt_mcp_server.py  main.py  server.py
mcp_server/app/: cache.py  models.py
mcp_server/app/database/: __init__.py  errors.py  pool.py  streaming.py
mcp_server/app/queries/: core_queries.py
mcp_server/app/services/: analysis.py  calculator.py  gdelt.py  gdelt.py.bak  gdelt_optimized.py
mcp_server/app/tools/: __init__.py  calculator.py  core_tools_v2.py  database.py  gdelt.py  gdelt_optimized.py  search.py
models/: README.md  thp_gdelt.pt
secrets/: README.md
web_app/: __init__.py  server.py
web_app/static/: ChatMessage.tsx  MapVisualization.tsx  RealTimeIndicator.tsx  app.js  index.html  mapIntegration.js  styles.css
