[project]
name = "gdelt-mcp-client"
version = "1.0.0"
description = "GDELT MCP Client App - A standalone MCP client with Kimi AI integration"
authors = [{name = "VT Research Team"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=1.0.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
