[project]
name = "gdelt-mcp-client"
version = "1.0.0"
description = "GDELT MCP Client App - A standalone MCP client with Kimi AI integration"
authors = [{name = "VT Research Team"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.55.0",
    "google-generativeai>=0.8.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
